--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,8 @@
 *.key
 
 #frontend
-node_modules/
-public/build/*
-
+frontend/node_modules/
+frontend/public/build/
 
 #ignore frontend static import
 frontend/assets.go
