--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "svelte-app",
+  "name": "scheduler",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
+    "dev": "node build.js",
+    "build": "node build.js prod"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
-  },
-  "dependencies": {
+    "esbuild": "^0.8.46",
+    "esbuild-svelte": "^0.4.1",
+    "svelte": "^3.0.0",
     "date-fns": "^2.17.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.5.0"
-  }
+  },
+  "dependencies": {}
 }
